# suggestService

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  gateway.go  go.sum  main.go
ccpkg/: suggestService.grpc.pb.cc  suggestService.grpc.pb.h  suggestService.pb.cc  suggestService.pb.h
pkg/suggestService/: suggestService.pb.go  suggestService.pb.gw.go
protos/: echo.proto  suggestService.proto
sources/: main.cpp
